--- a/dune
+++ b/dune
@@ -1,5 +1,5 @@
 (executables
-	(names cliex cliex2 cliex3)
+	(names cliex cliex3)
 	(libraries core )
-	(preprocess (pps ppx_let))
+	(preprocess (pps  ppx_jane ))
 	)
